sys_monitor/cloud/aws/main/sg.tf
resource "aws_security_group" "sys_monitor" {
  name        = "sys-monitor-sg"
  description = "Security group for sys_monitor"
  vpc_id      = aws_vpc.sys_monitor.id

  dynamic "ingress" {
    for_each = var.access_mode == "ssh" ? [1] : []

    content {
      description = "SSH"
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["${local.public_ip}/32"]
    }
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sys-monitor-sg"
  }
}
